--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2674,10 +2674,10 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background-image: url("../../images/banner.jpg");
+		background-image: url("../../images/madera8.jpg");
 		background-position: center center;
 		background-size: cover;
-		height: 28em;
+		height: 35em;
 		text-align: center;
 		position: relative;
 	}
